--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,5 +1,6 @@
 html {
   background-color: #B3FFBB;
+  font-family: sans-serif;
 }
 .head {
   border: 3px solid black;
@@ -50,4 +51,11 @@ img {
 #buttons {
   text-align: center;
   padding-top: 10px;
+}
+.home-img {
+  text-align: center;
+  margin: 15px;
+}
+.footer {
+  font-size: 13px;
 }
