Blog style updates

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -39,7 +39,7 @@
   margin-bottom: 3%;
 }
 header {
-  font-family: Futura;
+  font-family: Decima,"Helvetica Neue",Helvetica,Arial,sans-serif;
   text-align: center;
 }
 #buttons {
