--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -63,12 +63,22 @@ li {
   font-family: consolas, courier, monospace;
   font-size: .8em;
   line-height: 1.2em;
-  white-space: pre; 
-  background-color: #ccf; /* any colour's okay, 
+  white-space: pre;
+  background-color: #303030; /* any colour's okay, 
   so long as it's different to the page-background  
   (for ease of recognition) and contrast to the text */
-  color: #000; /* likewise the background-color comment */
+  color: #fff; /* likewise the background-color comment */
   border: 1px solid #666;
   border-radius: 1em; /* just in case */
   margin-top: 1.2em;
 }
+/* @group Ruby keyword styles */
+.ruby-constant   { color: #7fffd4; background: transparent; }
+.ruby-keyword    { color: #00ffff; background: transparent; }
+.ruby-integer    { color: #C07DFF; background: transparent; }
+.ruby-operator   { color: #FF23A4; background: transparent; }
+.ruby-string     { color: #ffdead; background: transparent; }
+.ruby-node       { color: #ffa07a; background: transparent; }
+.ruby-comment    { color: #5eff1f; font-weight: bold; background: transparent; }
+.ruby-regexp     { color: #ffa07a; background: transparent; }
+.ruby-value      { color: #7fffd4; background: transparent; }
