--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -86,6 +86,29 @@ li {
 .ruby-regexp     { color: #ffa07a; background: transparent; }
 .ruby-value      { color: #7fffd4; background: transparent; }
 
+.js-code {
+  font-family: consolas, courier, monospace;
+  font-size: .8em;
+  line-height: 1.2em;
+  white-space: pre;
+  background-color: #303030;
+  color: #fff; /* likewise the background-color comment */
+  border: 1px solid #666;
+  border-radius: 1em; /* just in case */
+  margin-top: 1.2em;
+}
+/* js keyword styles */
+.js-integer    { color: #ae81ff; background: transparent; }
+.js-operator   { color: #f9276c; background: transparent; }
+.js-string     { color: #e6db74; background: transparent; }
+.js-function   { color: #66d9e7; background: transparent; }
+.ruby-method     { color: #a6e22a; background: transparent; }
+.js-return     { color: #5eff1f; font-weight: bold; background: transparent; }
+.ruby-comment    { color: #75715a; background: transparent; }
+.ruby-argument   { color: #f59720; background: transparent; }
+.ruby-regexp     { color: #ffa07a; background: transparent; }
+.ruby-value      { color: #7fffd4; background: transparent; }
+
 .italics {
   font-style: italic;
 }
